--- a/style.css
+++ b/style.css
@@ -594,12 +594,6 @@ footer {
 		background-color: white;
 	}
 
-	nav ul {
-		display:none;
-	}
-
-
-
 	.presentation_area .presentation_text_box {
 		display:none;
 	}
@@ -623,7 +617,7 @@ footer {
 	}
 
 	h5{
-		top:50px;
+		margin-top:-50px;
 	}
 }
 
