--- a/_includes/nav_bar.html
+++ b/_includes/nav_bar.html
@@ -12,7 +12,7 @@
     </div>
 
     <ul>
-        <li><a href="https://www.linkedin.com/in/b%C3%A9renger-queune/" target="_blank">
+        <li><a href="https://www.linkedin.com/in/berenger-queune/" target="_blank">
             <img src="images/LinkedIn_logo_initials.png" alt="Linkedin Profile" />
         </a></li>
         <li><a href="https://github.com/BerengerQueune" target="_blank">
