--- a/_includes/career_bar.html
+++ b/_includes/career_bar.html
@@ -4,7 +4,7 @@
     <text x="574.97266" y="76.35833" style="fill:#000000;font-size:20px" xml:space="preserve"><tspan x="574.97266" y="76.35833" style="font-family:'Noto Sans JP';font-size:20px;text-align:center;text-anchor:middle">Data Analyst Certification</tspan></text>
     <text x="866.5144" y="63.755795" style="fill:#000000;font-size:20px" xml:space="preserve"><tspan x="866.5144" y="63.755795" style="font-family:'Noto Sans JP';font-size:20px;text-align:center;text-anchor:middle">Data Fullstack</tspan><tspan x="866.5144" y="90.609192" style="font-family:'Noto Sans JP';font-size:20px;text-align:center;text-anchor:middle">Master 1 degree</tspan></text>
     <text x="1141.9551" y="75.97747" style="fill:#000000;font-size:20px" xml:space="preserve"><tspan x="1141.9551" y="75.97747" style="font-family:'Noto Sans JP';font-size:20px;text-align:center;text-anchor:middle">Data Engineer training</tspan></text>
-    <text x="1499.8821" y="78.218681" style="fill:#000000;font-size:20px" xml:space="preserve"><tspan x="1499.8821" y="78.218681" style="font-family:'Noto Sans JP';font-size:20px;text-align:center;text-anchor:middle">AWS Solution Architect certification</tspan></text>
+    <text x="1499.8821" y="78.218681" style="fill:#000000;font-size:20px" xml:space="preserve"><tspan x="1499.8821" y="78.218681" style="font-family:'Noto Sans JP';font-size:20px;text-align:center;text-anchor:middle">AWS Solution Architect formation</tspan></text>
     <circle cx="72.557" cy="105.55" r="18.7" style="fill:#fff"/>
     <circle cx="414.6" cy="105.55" r="18.7" style="fill:#fff"/>
     <circle cx="738.12" cy="105.55" r="18.7" style="fill:#fff"/>
